--- a/CentralReplaceVehicle.html
+++ b/CentralReplaceVehicle.html
@@ -107,6 +107,38 @@
             autocomplete="off"
           />
         </div>
+        <!-- Vehicle Year -->
+<div class="mb-4">
+  <label for="00NU7000007EGYk" class="block text-sm font-medium text-gray-700">
+    Vehicle Year<span class="star">*</span>
+  </label>
+  <input
+    id="00NU7000007EGYk"
+    name="00NU7000007EGYk"
+    maxlength="30"
+    size="20"
+    type="text"
+    class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm"
+    autocomplete="off"
+  />
+</div>
+
+<!-- Vehicle Name -->
+<div class="mb-4">
+  <label for="00NU70000063XnC" class="block text-sm font-medium text-gray-700">
+    Vehicle Name<span class="star">*</span>
+  </label>
+  <input
+    id="00NU70000063XnC"
+    name="00NU70000063XnC"
+    maxlength="255"
+    size="20"
+    type="text"
+    class="mt-1 w-full p-2 border border-gray-300 rounded-lg shadow-sm"
+    autocomplete="off"
+  />
+</div>
+
         <!-- Purchase Date -->
         <div class="mb-4">
           <label for="00NU7000007Aop9" class="block text-sm font-medium text-gray-700">
@@ -182,10 +214,10 @@
       <option value="2,500 Deductible">2,500 Deductible</option>
       <option value="5,000 Deductible">5,000 Deductible</option>
       <option value="10,000 Deductible">10,000 Deductible</option>
-      <option value="50 Deductible with Full Coverage Glass">50 Deductible with  Full Coverage Glass</option>
-      <option value="100 Deductible with Full Coverage Glass">100 Deductible with  Full Coverage Glass</option>
+      <option value="50 Deductible with Full Coverage Glass">50 Deductible with  Full Coverage Glass</option>
+      <option value="100 Deductible with Full Coverage Glass">100 Deductible with  Full Coverage Glass</option>
       <option value="200 Deductible with Full Coverage Glass">200 Deductible with Full Coverage Glass</option>
-      <option value="250 Deductible with Full Coverage Glass">250 Deductible with  Full Coverage Glass</option>
+      <option value="250 Deductible with Full Coverage Glass">250 Deductible with  Full Coverage Glass</option>
       <option value="500 Deductible with Full Coverage Glass">500 Deductible with Full Coverage Glass</option>
       <option value="1,000 Deductible with Full Coverage Glass">1,000 Deductible with Full Coverage Glass</option>
       <option value="1,500 Deductible with Full Coverage Glass">1,500 Deductible with Full Coverage Glass</option>
@@ -635,6 +667,8 @@
   const requiredFields = [
     { id: "email", label: "Email", type: "email" },
     { radioGroupName: "00NU7000006IOzh", label: "Is this a quote or a change request?" },
+    { id: "00NU7000007EGYk", label: "Vehicle Year" },
+    { id: "00NU70000063XnC", label: "Vehicle Name" },
     { id: "00NU7000005zuX3", label: "Policy Number" },
     { id: "00NU7000005zuLl", label: "Effective Date (MM/DD/YYYY)", type: "date" },
     { id: "00NU7000006Knh3", label: "VIN Number of New Vehicle" },
