--- a/CentralReplaceVehicle.html
+++ b/CentralReplaceVehicle.html
@@ -267,7 +267,7 @@
   
   <div class="mb-4">
   <label for="00NU7000007CApB" class="block text-sm font-medium text-gray-700">
-    Excess Custom Equipment Coverage
+    Excess Custom Equipment Coverage<span class="star">*</span>
   </label>
   <input
     id="00NU7000007CApB"
