Change hidden input value

--- a/CentralReplaceVehicle.html
+++ b/CentralReplaceVehicle.html
@@ -55,7 +55,7 @@
           </div>
         </fieldset>
 
-        <input type="hidden" name="00NU7000005zuNN" id="00NU7000005zuNN" value="Add Vehicle" />
+        <input type="hidden" name="00NU7000005zuNN" id="00NU7000005zuNN" value="Replace Vehicle" />
 
         <div class="mb-4">
           <label for="00NU7000005zuX3" class="block text-sm font-medium text-gray-700">
