Remove unnecessary fields from CentralReplace

--- a/CentralReplaceVehicle.html
+++ b/CentralReplaceVehicle.html
@@ -353,7 +353,7 @@
   </div>
   <div class="mb-4">
   <label for="00NU7000007CBN3" class="block text-sm font-medium text-gray-700">
-    Name Continued<span class="star">*</span>
+    Name Continued
   </label>
   <input
     id="00NU7000007CBN3"
@@ -650,14 +650,11 @@
         { id: "00NU700000618cn", label: "Collision" },
         { id: "00NU7000007AORd", label: "Extended Transportation" },
         { id: "00NU7000007CApB", label: "Excess Custom Equipment Coverage" },
-        { id: "00NU7000007ALrx", label: "Towing and Labor" },
-        { id: "00NU7000007AP9B", label: "Excess Electronic Equipment" },
         { id: "00NU7000007APab", label: "Lease/Loan Guard" },
         { id: "00NU7000007APfR", label: "Trip Interruption Coverage" },
         { radioGroupName: "00NU7000007AxFi", label: "Is this vehicle leased?" },
         { radioGroupName: "00NU7000007Axvd", label: "Is there a Loan for this vehicle?" },
         { id: "00NU7000006YQuN", label: "Loss Payee Name" },
-        { id: "00NU7000007CBN3", label: "Name Continued" },
         { id: "00NU7000007AyLR", label: "Loss Payee Mailing Address" },
         { id: "00NU7000005zvUj", label: "Loss Payee City" },
         { id: "00NU7000005zvWL", label: "Loss Payee State" },
