--- a/CentralReplaceVehicle.html
+++ b/CentralReplaceVehicle.html
@@ -479,6 +479,7 @@
       <input type="hidden" name="lead_source" value="Web Form" />
       <input type="hidden" name="company" value="Caelius Test Central Replace Vehicle" />
       <input type="hidden" name="Debug_Notes__c" value="Safeco Test: 2025-06-27 07:21AM" />
+      <input type="hidden" name="delete_Action_Form__c" value="1" />
 
 
       <div class="flex justify-end mt-6">
